--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,11 +7,12 @@
     <uses-sdk 
         android:minSdkVersion="8" 
         android:targetSdkVersion="11" />
-
+	<uses-permission android:name="android.permission.INTERNET" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
+			android:windowSoftInputMode="stateVisible"
             android:label="@string/app_name"
             android:name=".MainActivity" >
             <intent-filter >
